--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: Collection of maritime fasteners
 lang: en-GB
 
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: http://localhost:4000 # the base hostname & protocol for your site
+url: http://test.golfstrike.co.uk/prosetest/ # the base hostname & protocol for your site
 git_address: https://github.com/aksakalli/jekyll-doc-theme
 git_edit_address: https://github.com/aksakalli/jekyll-doc-theme/blob/gh-pages
 
