--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ email: your-email@domain.com
 description: Collection of maritime fasteners
 lang: en-GB
 
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: http://test.golfstrike.co.uk/prosetest/ # the base hostname & protocol for your site
+baseurl: "/prosetest/" # the subpath of your site, e.g. /blog/
+url: http://test.golfstrike.co.uk/ # the base hostname & protocol for your site
 git_address: https://github.com/davestrawbridge/prosetest
 git_edit_address: https://github.com/davestrawbridge/prosetest/blob/gh-pages
 
